src/test/resources/valid_programs/expr_stm_vars_simple.notc
void main() {
    int i = 32;
    i;
    double d = 2.0;
    d;
    bool b = true;
    b;
    string s = "dksf";
    s;
}
