src/test/resources/semantic_errors/assign_string_div_int.notc
void main() {
    string s = "fffffffff";
    int n = s / 5;
}
